cmake_minimum_required(VERSION 3.31)
project(CENG_218___Post_Lab__Document_Indexing_and_Posting_Lists__Binary_Search_Tree_Based)

set(CMAKE_CXX_STANDARD 20)

add_executable(CENG_218___Post_Lab__Document_Indexing_and_Posting_Lists__Binary_Search_Tree_Based main.cpp
        BSTNode.cpp
        BSTNode.h
        LinkedListNode.cpp
        LinkedListNode.h
        LinkedListFiles.cpp
        LinkedListFiles.h
        BSTWords.cpp
        BSTWords.h)
