cmake_minimum_required(VERSION 3.30)
project(CENG_218___Post_Lab__Document_Indexing_and_Posting_Lists__Binary_Search_Tree_Based)

set(CMAKE_CXX_STANDARD 20)

add_executable(CENG_218___Post_Lab__Document_Indexing_and_Posting_Lists__Binary_Search_Tree_Based main.cpp
        BSTWords.cpp
        LinkedListFiles.cpp
        LinkedListNode.cpp
        BSTNode.cpp)
